# unipack-server

./: .env.example  .mcp.json  Dockerfile  LINKING_GUIDE.md  README.md  add-table-links.js  create-links-v2.js  create-product-builder.js  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-nocodb-schema.js
app/: __init__.py  auth.py  config.py  main.py  models.py
app/routers/: __init__.py  contacts.py  health.py  products.py  sync.py  v1.py
app/services/: __init__.py  ai_service.py  nocodb_service.py  odoo_service.py  sync_service.py
